--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,3 @@
-# These individuals contributed to the hbnb project in this repository 
+# This project was done by: 
 
-Ezra Nobrega <ezra.nobrega@outlook.com>
-Justin Majetich <justinmajetich@gmail.com>
+Abdul Khaliq Soule <abdulkhaliqsoule@gmail.com>
